# vox

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  models.toml  release-please-config.json
cargo/: config.toml
docs/: ARCHITECTURE.md  FEATURES.md  GUIDE.md
examples/: test_streaming.rs
github/workflows/: ci.yml  release-please.yml  release.yml
src/: audio.rs  clone.rs  config.rs  daemon.rs  db.rs  init.rs  input.rs  lib.rs  main.rs  mcp.rs  pack.rs  stt.rs  tui.rs
src/backend/: kokoro.rs  mod.rs  piper.rs  qwen.rs  qwen_native.rs  say.rs  voxtream.rs
src/chat/: claude_api.rs  mod.rs  sentence.rs  streaming.rs
tests/: chat_test.rs  cli_test.rs  clone_test.rs  db_test.rs  init_test.rs  input_test.rs  perf_test.rs  qwen_native_test.rs  qwen_test.rs  say_test.rs  security_test.rs  streaming_test.rs  stt_test.rs  ux_test.rs
