[package]
name = "vox"
version = "0.14.0"
edition = "2024"
description = "Cross-platform TTS CLI — local voice synthesis with Qwen and system say"
license = "Apache-2.0"
repository = "https://github.com/rtk-ai/vox"
keywords = ["tts", "voice", "speech", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]

[features]
default = []
kokoro = ["kokoro-tts"]
metal = ["qwen3-tts/metal", "qwen3-tts/accelerate"]
cuda = ["qwen3-tts/cuda"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "signal", "time"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
rodio = "0.20"
hound = "3"
qwen3-tts = { git = "https://github.com/TrevorS/qwen3-tts-rs", features = ["hub"], default-features = false }
piper-rs = { git = "https://github.com/thewh1teagle/piper-rs" }
include_dir = "0.7"
kokoro-tts = { version = "0.3", optional = true }
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
